--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae9bb5">  <td>24/07/22 19:06:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethodKey.test()[pri:0, instance:com.qa.TestMethod.TestMethodKey@71d44a3]">test</td> 
+<tr bgcolor="ae9bb5">  <td>24/08/02 19:31:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethodKey.startEngine1()[pri:1, instance:com.qa.TestMethod.TestMethodKey@7b98f307]">startEngine1</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>24/08/02 19:31:54</td>   <td>19323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMethodKey.startEngine2()[pri:2, instance:com.qa.TestMethod.TestMethodKey@7b98f307]">startEngine2</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
